--- a/tire_fitting/pubspec.yaml
+++ b/tire_fitting/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   sqflite:
   path:
   uuid: 2.2.2
+  flutter_i18n: ^0.9.0
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,6 +45,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+
+  assets:
+    - lib/locale/en.json
+    - lib/locale/ru.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
