--- a/tire_fitting/pubspec.yaml
+++ b/tire_fitting/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_i18n: ^0.9.0
   flutter_localizations:
     sdk: flutter
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,8 +48,8 @@ dev_dependencies:
 flutter:
 
   assets:
-    - lib/locale/en.json
-    - lib/locale/ru.json
+    - assets/flutter_i18n/en_US.json
+    - assets/flutter_i18n/ru_RU.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
